Rank performance, Base64